--- a/damiao.html
+++ b/damiao.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-    
+    <!-- 上传按钮 -->
+    <div class="damiao-btn">
+        上传图片
+    </div>
+
+
 
     <script type="text/javascript">
         ~function(){
